# mkshot-z

./: .gitignore  LICENSE  README.md  meson.build  meson.options
assets/: manifest.xml.in  meson.build  resource.rc.in
binding/: audio-binding.cpp  binding-mri-win32.h  binding-mri.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  cusl-binding.cpp  disposable-binding.h  etc-binding.cpp  filesystem-binding.cpp  flashable-binding.h  font-binding.cpp  graphics-binding.cpp  http-binding.cpp  input-binding.cpp  meson.build  miniffi-binding.cpp  miniffi.cpp  miniffi.h  module_rpg.cpp  plane-binding.cpp  sceneelement-binding.h  serializable-binding.h  sprite-binding.cpp  steam-binding.cpp  table-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  window-binding.cpp  windowvx-binding.cpp
binding/oneshot/: oneshot-binding.cpp
linux/: Makefile
macos/views/: SettingsMenuController.mm  TouchBar.h  TouchBar.mm  sdl_codes.h
shader/: bicubic.frag  lanczos3.frag  meson.build  xbrz.frag
src/: binding.h  config.cpp  config.h  eventthread.cpp  eventthread.h  main.cpp  meson.build  settingsmenu.cpp  settingsmenu.h  sharedstate.cpp  sharedstate.h
src/audio/: al-util.h  aldatasource.h  alstream.cpp  alstream.h  audio.cpp  audio.h  audiostream.cpp  audiostream.h  fluid-fun.cpp  fluid-fun.h  midisource.cpp  sdlsoundsource.cpp  sharedmidistate.h  soundemitter.cpp  soundemitter.h  vorbissource.cpp
src/crypto/: rgssad.cpp  rgssad.h
src/display/: autotiles.cpp  autotilesvx.cpp  bitmap.cpp  bitmap.h  flashable.h  font.cpp  font.h  graphics.cpp  plane.cpp  plane.h  sprite.cpp  sprite.h  tilemap-common.h  tilemap.cpp  tilemap.h  tilemapvx.cpp  tilemapvx.h  viewport.cpp  viewport.h  window.cpp  window.h  windowvx.cpp  windowvx.h
src/display/gl/: gl-debug.cpp  gl-debug.h  gl-fun.cpp  gl-fun.h  gl-meta.cpp  gl-meta.h  global-ibo.h  glstate.cpp  glstate.h  quad.h  quadarray.h  scene.cpp  scene.h  shader.cpp  shader.h  texpool.cpp  texpool.h  tileatlas.cpp  tileatlas.h  tileatlasvx.cpp  tileatlasvx.h  tilequad.cpp  tilequad.h  transform.h  vertex.cpp  vertex.h
src/etc/: etc-internal.h  etc.cpp  etc.h  table.cpp  table.h
src/filesystem/: filesystem.cpp  filesystem.h  filesystemImpl.cpp  filesystemImpl.h  filesystemImplApple.mm
src/input/: input.cpp  input.h  keybindings.cpp  keybindings.h
src/net/: net.cpp  net.h
src/oneshot/: gnome-fun.cpp  gnome-fun.h  i18n.cpp  i18n.h  journal.cpp  journal.h  oneshot-apple.h  oneshot-apple.mm  oneshot.cpp  oneshot.h  wallpaper.cpp  wallpaper.h  xfconf-fun.cpp  xfconf-fun.h
src/steam/: steam.cpp  steam.h
src/system/: system.h  systemImpl.cpp  systemImplApple.mm
src/util/: boost-hash.h  debugwriter.h  disposable.h  encoding.h  exception.h  iniconfig.cpp  iniconfig.h  intrulist.h  json5pp.hpp  sdl-util.h  serial-util.h  serializable.h  string-util.h  util.h  win-consoleutils.cpp  win-consoleutils.h  xdg-user-dirs.cpp  xdg-user-dirs.h
